CLETCOACH-116 Fix bug when showing cropped image preview

--- a/plugins/EducoTheme/webroot/css/crop.css
+++ b/plugins/EducoTheme/webroot/css/crop.css
@@ -87,10 +87,11 @@ body {
   margin-top: 100px;
 }
 
-.preview-huge {
-  height: 387px;
-  width: 184px;
-  margin-top: 140px;
+.preview-hidden {
+  display: none;
+  margin-bottom: 40px;
+  border: 3px solid #fff;
+  border-radius: 5px;
 }
 
 .preview-topic {
@@ -98,7 +99,17 @@ body {
   width: 806px;
 }
 
+.preview-topic-2 {
+  height: 387px;
+  width: 806px;
+}
+
 .preview-user {
+  height: 263px;
+  width: 263px;
+}
+
+.preview-user-2 {
   height: 263px;
   width: 263px;
 }
